--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -19,7 +19,8 @@
         "@remix-run/vercel": "^1.6.8",
         "@vercel/node": "^2.4.4",
         "react": "^18.2.0",
-        "react-dom": "^18.2.0"
+        "react-dom": "^18.2.0",
+        "ui": "*"
     },
     "devDependencies": {
         "@remix-run/dev": "^1.6.8",
