--- a/packages/ui-vite/package.json
+++ b/packages/ui-vite/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "ui",
+    "name": "ui-vite",
     "version": "0.0.0",
     "license": "MIT",
     "main": "./dist/index.js",
@@ -8,9 +8,15 @@
     "files": [
         "dist/**"
     ],
+    "exports": {
+        ".": {
+            "import": "./dist/ui-vite.es.js",
+            "require": "./dist/ui-vite.umd.js"
+        }
+    },
     "scripts": {
-        "build": "tsup src/index.tsx --format esm,cjs --dts --external react",
-        "dev": "tsup src/index.tsx --format esm,cjs --watch --dts --external react",
+        "build": "vite build",
+        "build:watch": "vite build --watch",
         "lint": "eslint"
     },
     "devDependencies": {
@@ -21,7 +27,8 @@
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "tsconfig": "*",
-        "tsup": "^6.2.2",
-        "typescript": "^4.7.4"
+        "typescript": "^4.7.4",
+        "vite": "^3.0.9",
+        "vite-plugin-dts": "^1.4.1"
     }
 }
