[Test] - feature: Setup Vitest for UI-Vite package

--- a/packages/ui-vite/package.json
+++ b/packages/ui-vite/package.json
@@ -17,18 +17,33 @@
     "scripts": {
         "build": "vite build",
         "build:watch": "vite build --watch",
-        "lint": "eslint"
+        "lint": "eslint",
+        "test": "vitest run",
+        "watch": "vitest",
+        "coverage": "vitest run --coverage",
+        "testui": "vitest --ui"
     },
     "devDependencies": {
+        "@testing-library/dom": "^8.17.1",
+        "@testing-library/react": "^13.3.0",
+        "@testing-library/user-event": "^14.4.3",
         "@types/react": "^18.0.15",
         "@types/react-dom": "^18.0.6",
+        "@types/react-test-renderer": "^18.0.0",
+        "@vitejs/plugin-react": "^2.0.1",
+        "@vitest/coverage-c8": "^0.22.1",
+        "@vitest/ui": "^0.22.1",
+        "c8": "^7.12.0",
         "eslint": "^8.20.0",
         "eslint-config-custom": "*",
+        "jsdom": "^20.0.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-test-renderer": "^18.2.0",
         "tsconfig": "*",
         "typescript": "^4.7.4",
         "vite": "^3.0.9",
-        "vite-plugin-dts": "^1.4.1"
+        "vite-plugin-dts": "^1.4.1",
+        "vitest": "^0.22.1"
     }
 }
