--- a/turbo.json
+++ b/turbo.json
@@ -1,15 +1,23 @@
 {
-  "$schema": "https://turborepo.org/schema.json",
-  "pipeline": {
-    "build": {
-      "dependsOn": ["^build"],
-      "outputs": ["dist/**"]
-    },
-    "lint": {
-      "outputs": []
-    },
-    "dev": {
-      "cache": false
+    "$schema": "https://turborepo.org/schema.json",
+    "pipeline": {
+        "build": {
+            "dependsOn": ["^build"],
+            "outputs": ["dist/**"]
+        },
+        "lint": {
+            "outputs": []
+        },
+        "dev": {
+            "cache": false
+        },
+        "test": {
+            "outputs": [],
+            "dependsOn": []
+        },
+        "coverage": {
+            "outputs": ["coverage/**"],
+            "dependsOn": []
+        }
     }
-  }
 }
